--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!-- Copyright 2020 Logique.com All rights reserved. -->
+<!-- Logique.com - About webpage -->
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- About webpage -->
-    <title>About</title>
+    <!-- Title of the webpage -->
+    <title>About Henry Logique</title>
+
+    <!-- Meta Description: 130 chracters -->
+    <meta name="description"
+        content="henry jean logique, about, portfolio, contact, web e-Learning application programmer, graphic designer, multimedia, visual effects">
+
+    <!-- Adjust for different devices -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Reset, Bootstrap, main Style and Responsive CSS files -->
     <link rel="stylesheet" href="assets/css/reset.css">
@@ -14,19 +24,23 @@
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
-
 </head>
 
 <body>
 
     <!-- Navigation Bar -->
     <nav class="navbar  navbar-expand-lg navbar-fixed-top navbar-dark bg-dark">
+
+        <!-- My Name as my logo  -->
         <a class="navbar-brand" href="#">HENRY JEAN LOGIQUE</a>
+
+        <!-- Navigation Buttons -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
+        <!-- Navigation Button Links -->
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
@@ -43,31 +57,35 @@
     </nav>
     <br> <br>
 
-    <!-- Main content about me -->
+    <!-- Main content of the About Me page -->
     <div class="container">
         <div class="row">
             <div class="col-md-9">
+                <!-- Grid row -->
                 <div class="row">
+                    <!-- Grid column -->
                     <div class="col-md-12">
-                        <h1 class="h1-responsive">About me</h1>
-                        <hr class="style">
-                        </hr>
-
+                        <!-- Heading Section -->
+                        <div class="page-header">
+                            <h1>About me</h1>
+                        </div>
+                        <!-- Divider Line -->
                     </div>
+                    <!-- Grid column -->
                     <div class="col-md-12">
-
-                        <img id="my_image" src="assets/images/my_pic1.jpg" />
+                        <!-- Section divider line -->
+                        <hr class="style">
+                        <!-- My image -->
+                        <img id="my_image" src="assets/images/my_pic1.png" alt="An image of me wearing a light blue shirt and a dark blue tie"  />
 
                         <p> I am a Web/E-Learning Application Programmer, working as a contarctor. My work experience is
                             in web design, programming, multimedia, graphic design and software quality assurance.
                             My acadmic backgrounds are MA in Visual Effects, MS in Biomedical Engineering, BS in
-                            physics, associate degree in Machinary Design. I have certificates in Web Design and
+                            physics and associate degree in Machinary Design. I have certificates in Web Design and
                             application Programming and studied Game programming for two symesters. I am currently
-                            studying the
-                            Full Stack Web Development at GW Code BootCamp. My interests are: using
-                            programming in Visualzation, 3D Virtual and Augmented Reality, Simulation and Artificial
+                            studying Full Stack Web Development at GW Code BootCamp. My interests are: using
+                            programming in 3D Visualzation, Virtual and Augmented Reality, Simulation and Artificial
                             Intelligence.
-
                         </p>
                     </div>
                 </div>
@@ -76,7 +94,7 @@
     </div>
 
     <!-- Footer -->
-    <footer class="text-muted">Copyright © 2020 Logique.com, Inc. All rights reserved.</footer>
+    <footer class="text-muted">Copyright © 2020 Logique.com, All rights reserved.</footer>
 
     <!-- JQuery and Bootstrap JScript -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
