--- a/portfolio.html
+++ b/portfolio.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!-- Copyright 2020 Logique.com All rights reserved. -->
+<!-- Logique.com - Portfolio webpage -->
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Portfolio webpage -->
-    <title>Porfolio</title>
+    <!-- Title of the webpage -->
+    <title>Portfolio of Henry Logique</title>
+
+    <!-- Meta Description: 130 chracters -->
+    <meta name="description"
+        content="henry jean logique, about, portfolio, contact, web e-Learning application programmer, graphic designer, multimedia, visual effects">
+
+    <!-- Adjust for different devices -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Reset, Bootstrap, main Style and Responsive CSS files -->
     <link rel="stylesheet" href="assets/css/reset.css">
@@ -20,12 +30,17 @@
 
     <!-- Navigation Bar -->
     <nav class="navbar  navbar-expand-lg navbar-fixed-top navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">HENRY JEAN LOGIQUE</a>
+
+        <!-- My Name as my logo  -->
+        <a class="navbar-brand" href="index.html">HENRY JEAN LOGIQUE</a>
+
+        <!-- Navigation Buttons -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
+        <!-- Navigation Button Links -->
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
@@ -43,33 +58,44 @@
 
     <br>
 
-    <!-- Portfolio images with the Bootstrap Card Columan style  -->
+    <!-- Main content of the Portfolio page contains images displayed in the Bootstrap Card Column Layout  -->
     <div class="container">
-        
-        <h1 class="h1-responsive" id="portfolio_title">Portfolio</h1>
-        
+
+        <!-- Heading -->
+        <div class="page-header">
+            <h1 id="portfolio_title">Portfolio</h1>
+        </div>
+        <!-- Grid row -->
         <div class="row">
+            <!-- Grid column -->
             <div class="col-md-9">
                 <hr class="style">
-        </hr>
+                </hr> <!-- Divider Line -->
+                <!-- Card Column Layout-->
                 <div class="card-columns">
                     <div class="card">
-                        <img src="assets/images/img6.png" class="card-img-top" alt="image sample 1">
+                        <img src="assets/images/img6.png" class="card-img-top"
+                            alt="Image artwork 1 displays three alien space crafts flying over the sea in an early morning.">
                     </div>
                     <div class="card">
-                        <img src="assets/images/img1.png" class="card-img-top" alt="image sample 1">
+                        <img src="assets/images/img1.png" class="card-img-top"
+                            alt="Image artwork 2 displays the bluish surface of an alien ship in the spacships, while it is in an inactive state.">
                     </div>
                     <div class="card">
-                        <img src="assets/images/img2.png" class="card-img-top" alt="image sample 2">
+                        <img src="assets/images/img2.png" class="card-img-top"
+                            alt="Image artwork 3 displays three redish alien probes in an alien planet.">
                     </div>
                     <div class="card">
-                        <img src="assets/images/img3.png" class="card-img-top" alt="image sample 3">
+                        <img src="assets/images/img3.png" class="card-img-top"
+                            alt="Image artwork 4 displays the glowing surface of an alien spacships in the space, while it is in the active state.">
                     </div>
                     <div class="card">
-                        <img src="assets/images/img4.png" class="card-img-top" alt="image sample 4">
+                        <img src="assets/images/img4.png" class="card-img-top"
+                            alt="Image artwork 5 displays many insect like alien spacships passing through a gate in the ocean.">
                     </div>
                     <div class="card">
-                        <img src="assets/images/img5.png" class="card-img-top" alt="image sample 5">
+                        <img src="assets/images/img5.png" class="card-img-top"
+                            alt="Image artwork 6 displays three goldish space crafts flying over the surface of an alien planet.">
                     </div>
                 </div>
             </div>
@@ -77,7 +103,7 @@
     </div>
 
     <!-- Footer -->
-    <footer class="text-muted">Copyright © 2020 Logique.com, Inc. All rights reserved.</footer>
+    <footer class="text-muted">Copyright © 2020 Logique.com, All rights reserved.</footer>
 
     <!-- JQuery and Bootstrap JScript -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
